# raptrix-cim-rs

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  MIGRATION-v0.8.0.md  MIGRATION.md  README.md  example_powerflow.parquet  pytest.ini
.cargo/: config.toml
.githooks/: README.md  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: markdown-lint.yml  master-contract.yml  public-safety.yml  release-binaries.yml  release.yml  version-consistency.yml
docs/: architecture-mmusto01.md  architecture.md  release-sync-workflow.md  requirements-template.md  roadmap.md  rpf-field-guide.md  schema-contract.md
raptrix-cim-arrow/: Cargo.toml  README.md
raptrix-cim-arrow/src/: io.rs  lib.rs  schema.rs
scripts/: package-unix.sh  package-windows.ps1  public-safety-check.sh  sync-versions.ps1  test-wsl.ps1
src/: arrow_schema.rs  lib.rs  main.rs  parser.rs  rpf_writer.rs  test_utils.rs
src/models/: base.rs  connectivity_node_group.rs  equipment.rs  mod.rs  topological_node.rs
tests/: all_fixture_cim_to_rpf.rs  generate_rpf_matrix.py  inspect_rpf.py  integration_parse.rs  planning_solved_semantics.rs  rpf_detail_levels.rs
tests/data/fixtures/: detail_eq_with_breaker.xml  memory_snapshot.rpf  minimal_eq.xml  smart_valve_demo_DY.xml  smart_valve_demo_EQ.xml
