[package]
name = "raptrix-cim-rs"
version = "0.1.1"
edition = "2021"
description = "High-performance IEC 61970 Common Information Model (CIM) parser in Rust"
license = "MPL-2.0"
repository = "https://github.com/MustoTechnologies/raptrix-cim-rs"
keywords = ["cim", "iec61970", "power-systems", "xml", "parser"]
categories = ["parsing", "science"]

[dependencies]
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

# Arrow + Parquet for zero-copy CIM → columnar data pipeline
arrow   = "58.0"
parquet = { version = "58.0", features = ["arrow"] }

# anyhow gives beginner-friendly `?` error propagation in main()
anyhow  = "1.0"

[dev-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
