[workspace]
members = ["raptrix-cim-arrow"]
resolver = "2"

[package]
name = "raptrix-cim-rs"
version = "0.2.8"
edition = "2024"
description = "High-performance IEC 61970 Common Information Model (CIM) parser in Rust"
license = "MPL-2.0"
repository = "https://github.com/RaptrixPowerFlow/raptrix-cim-rs"
keywords = ["cim", "iec61970", "power-systems", "xml", "parser"]
categories = ["parsing", "science"]

[dependencies]
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
raptrix-cim-arrow = { path = "raptrix-cim-arrow", version = "0.2.8" }

# Arrow + Parquet for zero-copy CIM → columnar data pipeline
arrow   = "58.0"
parquet = { version = "58.0", features = ["arrow"] }

# anyhow gives beginner-friendly `?` error propagation in main()
anyhow  = "1.0"
memmap2 = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"

[features]
default = []
strict = []

[dev-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

