[package]
name = "raptrix-cim-arrow"
version = "0.3.0"
edition = "2024"
description = "Shared Raptrix CIM-Arrow schema and RPF Arrow IPC infrastructure"
license = "MPL-2.0"
repository = "https://github.com/RaptrixPowerFlow/raptrix-cim-rs"
keywords = ["arrow", "power-systems", "schema", "rpf"]
categories = ["data-structures", "science"]

[dependencies]
anyhow = "1.0"
arrow = "58.0"
memmap2 = "0.9"
